Fixing doodle.css overflow issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1 {
 .doodle {
 	position: fixed;
 	z-index: -5;
+	overflow: hidden;
 	}
 
 .header {
